Dictionaries.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. Todos los derechos reservados.

Prueba la nueva tecnología PowerShell multiplataforma https://aka.ms/pscore6

python.exethon : El término 'python.exethon' no se reconoce como nombre de un cmdlet,       
función, archivo de script o programa ejecutable. Compruebe si escribió correctamente el    
nombre o, si incluyó una ruta de acceso, compruebe que dicha ruta es correcta e inténtelo   
de nuevo.
En línea: 1 Carácter: 1
+ python.exethon
+ ~~~~~~~~~~~~~~
    + CategoryInfo          : ObjectNotFound: (python.exethon:String) [], CommandNotFoundE  
   xception
    + FullyQualifiedErrorId : CommandNotFoundException

PS C:\Users\ivana> python.exe
Python 3.7.6 (tags/v3.7.6:43364a7ae0, Dec 19 2019, 01:54:44) [MSC v.1916 64 bit (AMD64)] on 
win32
Type "help", "copyright", "credits" or "license" for more information.
>>> true
Traceback (most recent call last):   
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined
>>> false
Traceback (most recent call last):    
  File "<stdin>", line 1, in <module> 
NameError: name 'false' is not defined
>>> True
True
>>> false
Traceback (most recent call last):    
  File "<stdin>", line 1, in <module> 
NameError: name 'false' is not defined
>>> False   
False
>>> bool(1) 
True
>>> bool(0) 
False
>>> bool(1.0) 
True
>>> bool("")  
False
>>> bool(" ") 
True
>>> my_name = "Ivan"
>>> my_name
'Ivan'
>>> my_name + "Arias"
'IvanArias'
>>> my_name + " Arias" 
'Ivan Arias'
>>> my_name + " /nArias" 
'Ivan /nArias'
>>> my_name + " /n Arias" 
'Ivan /n Arias'
>>> my_name += " Arias"   
>>> my_name               
'Ivan Arias'
>>> my_name + /n " Perez" 
  File "<stdin>", line 1
    my_name + /n " Perez"
              ^
SyntaxError: invalid syntax
>>> pwd
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pwd' is not defined
>>> text find(t) 
  File "<stdin>", line 1
    text find(t)
            ^
SyntaxError: invalid syntax
>>> text.find(t) 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'text' is not defined
>>> "Ivan".find('n') 
3
>>> my_list = [1, 2, 3, 4, 5]
>>> my_list
[1, 2, 3, 4, 5]
>>> my_list[4] 
5
>>> my_list2 = [Ivan, Arias, Perez]       
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'Ivan' is not defined
>>> my_list2 = ["Ivan", "Arias", "Perez"] 
>>> my_list2 
['Ivan', 'Arias', 'Perez']
>>> my_list2[0] 
'Ivan'
>>> len(mylist2) 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'mylist2' is not defined
>>> len(my_list2) 
3
>>> len(my_list2)
3
>>> my_list(len(my_list2) -1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'list' object is not callable
>>> my_list(len(my_list) -1)  
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'list' object is not callable
>>> my_list[len(my_list) -1] 
5
>>> my_list[len(my_list) -1] 
5
>>> mylist
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'mylist' is not defined
>>> my_list 
[1, 2, 3, 4, 5]
>>> my_list[len(my_list2) -1] 
3
>>> my_list2[len(my_list2) -1] 
'Perez'
>>>
>>> 
>>> 
>>> 
>>> my_list[0:10] 
[1, 2, 3, 4, 5]
>>> my_list=[0:10] 
  File "<stdin>", line 1
    my_list=[0:10]
              ^
SyntaxError: invalid syntax
>>> my_list= [0:10] 
  File "<stdin>", line 1
    my_list= [0:10]
               ^
SyntaxError: invalid syntax
>>> my_list= [0:3]  
  File "<stdin>", line 1
    my_list= [0:3]
               ^
SyntaxError: invalid syntax
>>> my_list[0:3]   
[1, 2, 3]
>>> my_list[::2] 
[1, 3, 5]
>>> my_list[::1] 
[1, 2, 3, 4, 5]
>>> my_list[::-1] 
[5, 4, 3, 2, 1]
>>> my_list[::-1] 
[5, 4, 3, 2, 1]
>>> my_list[0] ="a"
>>> my_list[::-1]   
[5, 4, 3, 2, 'a']
>>>  my_list.remove(7) 
  File "<stdin>", line 1
    my_list.remove(7)
    ^
IndentationError: unexpected indent
>>>  my_list.remove(0) 
  File "<stdin>", line 1
    my_list.remove(0)
    ^
IndentationError: unexpected indent
>>>  my_list.remove(1) 
  File "<stdin>", line 1
    my_list.remove(1)
    ^
IndentationError: unexpected indent
>>> my_list[::-1]      
[5, 4, 3, 2, 'a']
>>>  my_list.remove(4) 
  File "<stdin>", line 1
    my_list.remove(4)
    ^
IndentationError: unexpected indent
>>> my_lis
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'my_lis' is not defined
>>> my_list
['a', 2, 3, 4, 5]
>>> my_list.remove
<built-in method remove of list object at 0x000002406F7C5408>
>>> my_list.remove(1) 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: list.remove(x): x not in list
>>> my_list.remove(4) 
>>> my_list
['a', 2, 3, 5]
>>> my_list.remove("a")
>>> my_list
[2, 3, 5]
>>> my_list.pop        
<built-in method pop of list object at 0x000002406F7C5408>
>>> my_list.pop()
5
>>> my_list       
[2, 3]
>>> my_list.pop()
3
>>> my_list       
[2]
>>> my_list.pop()
2
>>> my_list       
[]
>>> my_list.pop()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: pop from empty list
>>> my_list = [0:6]
  File "<stdin>", line 1
    my_list = [0:6]
                ^
SyntaxError: invalid syntax
>>> my_list = [1,2,3,4,5,6]
>>> my_list
[1, 2, 3, 4, 5, 6]
>>> my_list.pop(0)
1
>>> my_list
[2, 3, 4, 5, 6]
>>> man
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'man' is not defined
>>> my_list.insert(1, 0)
>>> my_list
[2, 0, 3, 4, 5, 6]
>>> my_list.insert(0, 1)
>>> my_list
[1, 2, 0, 3, 4, 5, 6]
>>> my_list.pop(2)
0
>>> my_list
[1, 2, 3, 4, 5, 6]
>>>
>>> 
>>> 
>>> 
>>> point (2.0, 3.0) 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'point' is not defined
>>> point = (2.0, 3.0) 
>>> point
(2.0, 3.0)
>>> point_3d = point + (4.0,) 
>>> point_3d                 
(2.0, 3.0, 4.0)
>>> x, y,z = point_3d 
>>> x
2.0
>>> y
3.0
>>> z
4.0
>>> print("My name is: %s %s" % ("Ivan ", "Arias"))    
My name is: Ivan  Arias
>>> print("My name is: %s %s %s" % ("Ivan ", "Arias")) 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: not enough arguments for format string      
>>> print("My name is: %s %s %s" % ("Ivan ", "Arias", "Perez))
  File "<stdin>", line 1
    print("My name is: %s %s %s" % ("Ivan ", "Arias", "Perez))

      ^
SyntaxError: EOL while scanning string literal
>>> print("My name is: %s %s %s" % ("Ivan ", "Arias", "Perez"))
My name is: Ivan  Arias Perez
>>> range
<class 'range'>
>>> range(10) 
range(0, 10)
>>> list(range(10)) 
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> list(range(100)) 
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 
16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 
71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> ages = { 'Ivan': 39, 'Shir': 33, 'Nai': 11} 
>>> ages
{'Ivan': 39, 'Shir': 33, 'Nai': 11}
>>> ages['Ivan'] 
39
>>> ages['Nai']  
11
>>> ages['Gabriel']  
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'Gabriel'
>>> ages['Gabriel'] = 2
>>> ages
{'Ivan': 39, 'Shir': 33, 'Nai': 11, 'Gabriel': 2}
>>> ages['Marta'] = 63  
>>> ages
{'Ivan': 39, 'Shir': 33, 'Nai': 11, 'Gabriel': 2, 'Marta': 63}
>>> del ages['Marta']
>>> ages
{'Ivan': 39, 'Shir': 33, 'Nai': 11, 'Gabriel': 2}      
>>> ages['Marta'] = 63
>>> ages,pop
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pop' is not defined
>>> ages.pop
<built-in method pop of dict object at 0x000002406FBE02C8>
>>> ages.pop('Marta')
63
>>> ages
{'Ivan': 39, 'Shir': 33, 'Nai': 11, 'Gabriel': 2}      
>>> ages['Marta'] = 63
>>>
>>>
>>> ages.het('Marta')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'dict' object has no attribute 'het'   
>>> ages.get('Marta')
63
>>> ages.keys()
dict_keys(['Ivan', 'Shir', 'Nai', 'Gabriel', 'Marta']) 
>>> list(ages.keys())
['Ivan', 'Shir', 'Nai', 'Gabriel', 'Marta']